examples/05-traffic-mirroring/virtual-service.yaml
# ============================================================================
# TRAFFIC MIRRORING: Send copy of traffic to v2
# ============================================================================
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-mirror
  namespace: mirror-demo
spec:
  hosts:
    - httpbin
  http:
    - route:
        - destination:
            host: httpbin
            subset: v1
          weight: 100 # All production traffic to v1
      mirror:
        host: httpbin
        subset: v2 # Mirror to v2
      mirrorPercentage:
        value: 100.0 # Mirror 100% of requests
